--- a/package.json
+++ b/package.json
@@ -39,7 +39,9 @@
     "@radix-ui/react-toggle-group": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.6",
     "autoprefixer": "^10.4.20",
+    "axios": "^1.8.1",
     "class-variance-authority": "^0.7.1",
+    "cloudinary": "^2.5.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
     "date-fns": "^3.6.0",
@@ -54,6 +56,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.1",
     "react-resizable-panels": "^2.1.7",
+    "react-scroll": "^1.9.3",
     "recharts": "2.15.0",
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.5",
@@ -62,6 +65,7 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@types/axios": "^0.9.36",
     "@types/node": "^22",
     "@types/react": "^18",
     "@types/react-dom": "^18",
