--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "next": "14.2.16",
     "next-cloudinary": "^6.16.0",
     "next-themes": "^0.4.4",
-    "nodemailer": "^6.10.0",
+    "nodemailer": "^6.10.1",
     "react": "^18.3.1",
     "react-day-picker": "8.10.1",
     "react-dom": "^18.3.1",
@@ -71,6 +71,7 @@
   "devDependencies": {
     "@types/axios": "^0.9.36",
     "@types/node": "^22",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "postcss": "^8",
